--- a/app/modules/admin/components/product-form/template.html
+++ b/app/modules/admin/components/product-form/template.html
@@ -77,7 +77,7 @@
             Edit
         </button>
         <button class="btn btn-default"
-                ng-click="vm.cancel({product: {}})"
+                ng-click="vm.cancel()"
                 ng-hide="vm.selectedProductIsEmpty()">
             Cancel
         </button>
